RESOLVED FIXED67063
Fold _webkit_initWithDomain into _webkit_errorWithDomain in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=67063
Summary Fold _webkit_initWithDomain into _webkit_errorWithDomain in WebKit2
Sam Weinig
Reported 2011-08-26 13:53:11 PDT
Fold _webkit_initWithDomain into _webkit_errorWithDomain in WebKit2
Attachments
Patch (1.83 KB, patch)
2011-08-26 13:53 PDT, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2011-08-26 13:53:38 PDT
Darin Adler
Comment 2 2011-08-26 13:54:40 PDT
Comment on attachment 105403 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=105403&action=review > Source/WebKit2/WebProcess/WebCoreSupport/mac/WebErrorsMac.mm:88 > + return [[[NSError alloc] initWithDomain:domain code:code userInfo:dict] autorelease]; Why the change from self to NSError?
Anders Carlsson
Comment 3 2011-08-26 14:02:56 PDT
Comment on attachment 105403 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=105403&action=review >> Source/WebKit2/WebProcess/WebCoreSupport/mac/WebErrorsMac.mm:88 >> + return [[[NSError alloc] initWithDomain:domain code:code userInfo:dict] autorelease]; > > Why the change from self to NSError? I'd like to know this too! (Not that it matters since nobody subclasses NSError in the web process).
Sam Weinig
Comment 4 2011-08-26 16:38:39 PDT
(In reply to comment #2) > (From update of attachment 105403 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=105403&action=review > > > Source/WebKit2/WebProcess/WebCoreSupport/mac/WebErrorsMac.mm:88 > > + return [[[NSError alloc] initWithDomain:domain code:code userInfo:dict] autorelease]; > > Why the change from self to NSError? No good reason. Will change it back.
Sam Weinig
Comment 5 2011-08-26 16:44:06 PDT
Note You need to log in before you can comment on or make changes to this bug.