Fold _webkit_initWithDomain into _webkit_errorWithDomain in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=67063

Reviewed by Anders Carlsson.

* WebProcess/WebCoreSupport/mac/WebErrorsMac.mm:
(+[NSError _webkit_errorWithDomain:code:URL:]):


Canonical link: https://commits.webkit.org/82869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93925 268f45cc-cd09-0410-ab3c-d52691b4dbfc